manifests/apps/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ing
  namespace: apps
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: apps
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:021891580761:certificate/ed400733-8b7b-42b9-b407-7c37a5f5391e
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  ingressClassName: alb
  rules:
    - host: rick-n-morty.gal-rozman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rick-n-morty-api-svc
                port:
                  number: 80
    - host: weather.gal-rozman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weather-app-svc
                port:
                  number: 80
